# pv_design_app

./: README.md  app.py  create_executable.py  pyproject.toml  requirements.txt
components/: dateinput.py  geolocation.py  ids.py  layout.py  location.py  opti_modal.py  panel.py  panels.py  result_graph.py  weather.py
playground/: annual_energy.ipynb
